plugins {
    id 'java'
    id 'antlr'
    id 'maven-publish'
    id 'com.gradleup.shadow' version '8.3.3'
}

group = 'SqlParser.pars'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    antlr 'org.antlr:antlr4:4.13.0'
    implementation 'org.antlr:antlr4-runtime:4.13.0'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.0'

    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'org.mockito:mockito-core:5.3.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

generateGrammarSource {
    arguments += ['-visitor', '-no-listener', '-package', 'SqlParser.Antlr']
    outputDirectory = file("build/generated-src/antlr/main/SqlParser/Antlr")
}


tasks.register('buildDependencies') {
    description = 'Generates ANTLR grammar sources and compiles the project'
    dependsOn generateGrammarSource, compileJava
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
    options.release = 21
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

compileJava.dependsOn generateGrammarSource

publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId    = 'com.simpledb'
            artifactId = 'simple-db-driver'
            version    = '1.0-SNAPSHOT'
            from components.java
        }
    }
}

shadowJar {
    archiveClassifier.set('')
    mergeServiceFiles()
    manifest {
        attributes 'Main-Class': 'Main'
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
        showStandardStreams = true
        exceptionFormat = "full"
    }
}